# hoi4-mods-manager

./: .gitignore  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
src/: __init__.py  dialog.py  hoi4-mods-manager.py  main.py  mods.py  path.py  settings.py  steam_clients.py  utils.py  version.py
src/common/: __init__.py  cmd.py  dialog.py  mods.py  path.py  settings.py  steam.py
src/hoi4_mods_manager/: __main__.py  install.py  main.py  start.py  uninstall.py  update.py
src/main/: install.py  start.py  uninstall.py  update.py
src/mods/: __init__.py
src/pages/: __init__.py  install.py  start.py  uninstall.py  update.py
src/pages/settings/: __init__.py  certificate.py  download_max_threads.py  max_chunk_size.py  users.py
tests/: get_item_info.py  test_get_mod_info.py  test_sort_files.py
tools/: get_tag_name.py  get_version.py  lndl-config.py  lndl_config.py
