[project]
name = "hoi4-mod-manager"
version = "1.0.0"
description = "使用SteamCMD下载钢铁雄心4Mod"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "prompt-toolkit>=3.0.48",
    "requests>=2.32.3",
    "rich>=13.9.1",
    "steam[client]>=1.4.4",
    "vdf>=3.4",
]

[tool.uv]
dev-dependencies = [
    "lib-not-dr[nuitka]>=0.4.0",
    "nuitka>=2.4.8",
    "ruff>=0.6.8",
    "tomli>=2.0.2",
]

[tool.ruff]
line-length = 100
output-format = "grouped"
preview = true
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.lndl.nuitka]
script = "tools/lndl-config.py"

[tool.lndl.nuitka.cli]
main = "src/hoi4-mods-manager.py"
output-dir = "build"

clang = true
msvc = "latest"
standalone = true
onefile = true
lto = "yes"
disable-console = false
show-memory = false
show-progress = false

product-version = false
file-version = false

product-name = "hoi4 mods manager"
company-name = "Arama"
file-description = "hoi4 mods manager"
copyright = "Copyright ©Arama. All rights reserved."

assume-yes-for-download = true

# 依赖
include-package = ["steam"]
