[project]
name = "hoi4-mods-manager"
version = "1.2.0"
description = "从SteamCDN下载钢铁雄心4Mod"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "loguru>=0.7.2",
    "prompt-toolkit>=3.0.48",
    "psutil>=6.0.0",
    "requests>=2.32.3",
    "rich>=13.9.2",
    "steam[client]",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "tomli>=2.0.2",
]

[tool.uv.sources]
steam = { git = "https://github.com/detiam/steam_websocket.git", rev = "solsticegamestudios_fork" }

[tool.ruff]
line-length = 100
output-format = "grouped"
preview = true
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

#[tool.lndl.nuitka]
#script = "tools/lndl-config.py"
#
#[tool.lndl.nuitka.cli]
#main = "src/main.py"
#output-dir = "build"
#output-filename = "hoi4-mods-manager.exe"
#
#clang = true
#msvc = "latest"
#standalone = true
#onefile = true
#
#product-name = "hoi4 mods manager"
#company-name = "Arama"
#file-description = "hoi4 mods manager"
#copyright = "Copyright ©Arama. All rights reserved."
#
## 依赖
#include-package = ["steam"]
